# LuminWP

./: CMakeLists.txt  README.md
cmake/: LuminConfig.cmake.in  LuminWPConfig.cmake.in  LuminWallpaperConfig.cmake.in
examples/: CMakeLists.txt  Info.plist.in
examples/raylib/: CMakeLists.txt  main.cpp
include/: lumin.h
src/platform/linux/: desktop_integration_linux.cpp
src/platform/macos/: desktop_integration_macos.mm
src/platform/windows/: desktop_integration_windows.cpp
